upgrade gohttpc b5ade719

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,8 +1,14 @@
 name: Unit tests
 
 on:
+  pull_request:
   push:
+    branches:
+      - main
 
+permissions:
+  pull-requests: write
+  
 jobs:
   lint:
     name: Lint and test
