--- a/examples/auth/config.yaml
+++ b/examples/auth/config.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=../../docs/auth.schema.json
+# yaml-language-server: $schema=../../jsonschema/auth.schema.json
 settings:
   strict: true
 definitions:
