--- a/.golangci.yml
+++ b/.golangci.yml
@@ -110,6 +110,8 @@ linters:
       exclusions:
         - "*.UnmarshalJSON"
         - "*.UnmarshalYAML"
+        - "*.IsZero"
+        - "*.Equal"
   # Defines a set of rules to ignore issues.
   # It does not skip the analysis, and so does not ignore "typecheck" errors.
   exclusions:
