--- a/.golangci.yml
+++ b/.golangci.yml
@@ -45,6 +45,8 @@ linters:
       allow-first-in-block: true
       allow-whole-block: false
       branch-max-lines: 2
+    exhaustive:
+      default-signifies-exhaustive: true
 
     gocognit:
       min-complexity: 40
