ci: add release pipelines

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,10 +1,15 @@
 name: Unit tests
 
 on:
+  workflow_call:
   pull_request:
   push:
     branches:
       - main
+
+env:
+  DOCKER_REGISTRY: ghcr.io
+  DOCKER_IMAGE_NAME: relychan/rely-auth
 
 permissions:
   pull-requests: write
@@ -56,3 +61,31 @@ jobs:
       - name: Dump docker logs on failure
         if: failure()
         uses: jwalton/gh-docker-logs@v2
+
+      - name: Get version from tag
+        id: get-version
+        # if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
+        run: |
+          echo "ref_version=${GITHUB_SHA:0:10}" >> $GITHUB_OUTPUT
+        shell: bash
+
+      - name: Build image
+        id: docker-build
+        # if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
+        run: |
+          docker build --build-arg VERSION=$VERSION \
+            -t "$DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$VERSION" .
+        env:
+          VERSION: ${{ steps.get-version.outputs.ref_version }}
+          
+      - name: Scan High/Critical Vulnerabilities
+        uses: aquasecurity/trivy-action@0.33.1
+        # if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
+        with:
+          scan-type: "image"
+          image-ref: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ steps.get-version.outputs.ref_version }}
+          format: table
+          severity: "CRITICAL,HIGH"
+          scanners: vuln
+          ignore-unfixed: true
+          exit-code: 1
