ci: separate scan to a new job

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
       - uses: actions/setup-go@v6
         with:
           go-version-file: ./go.mod
@@ -62,16 +62,22 @@ jobs:
         if: failure()
         uses: jwalton/gh-docker-logs@v2
 
+  build-scan:
+    name: Build and scan vulnerabilities
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
       - name: Get version from tag
         id: get-version
-        # if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
         run: |
           echo "ref_version=${GITHUB_SHA:0:10}" >> $GITHUB_OUTPUT
         shell: bash
 
       - name: Build image
         id: docker-build
-        # if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
         run: |
           docker build --build-arg VERSION=$VERSION \
             -t "$DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$VERSION" .
@@ -80,7 +86,6 @@ jobs:
           
       - name: Scan High/Critical Vulnerabilities
         uses: aquasecurity/trivy-action@0.33.1
-        # if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
         with:
           scan-type: "image"
           image-ref: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ steps.get-version.outputs.ref_version }}
