feat: add security rules

--- a/server/testdata/config.yaml
+++ b/server/testdata/config.yaml
@@ -20,8 +20,9 @@ definitions:
         x-hasura-user-id:
           path: sub
   - mode: apiKey
-    in: header
-    name: Authorization
+    tokenLocation:
+      in: header
+      name: Authorization
     value:
       value: "randomsecret"
     sessionVariables:
