--- a/examples/auth/config.yaml
+++ b/examples/auth/config.yaml
@@ -3,8 +3,9 @@ settings:
   strict: true
 definitions:
   - mode: apiKey
-    in: header
-    name: Authorization
+    tokenLocation:
+      in: header
+      name: Authorization
     value:
       value: "randomsecret"
     sessionVariables:
