--- a/server/testdata/config.yaml
+++ b/server/testdata/config.yaml
@@ -3,7 +3,8 @@ settings:
   strict: true
   reloadInterval: 0
 definitions:
-  - mode: jwt
+  - id: test_jwt
+    mode: jwt
     tokenLocation:
       in: header
       name: Authorization
@@ -19,12 +20,22 @@ definitions:
       locations:
         x-hasura-user-id:
           path: sub
+    # securityRules:
+    #   allowedIPs:
+    #     patterns:
+    #       value:
+    #         - "127.0.0.1/32"
   - mode: apiKey
     tokenLocation:
       in: header
       name: Authorization
     value:
       value: "randomsecret"
+    # securityRules:
+    #   allowedIPs:
+    #     patterns:
+    #       value:
+    #         - "127.0.0.1/32"
     sessionVariables:
       x-hasura-role:
         value: admin
