--- a/examples/compose.yaml
+++ b/examples/compose.yaml
@@ -32,6 +32,7 @@ services:
       OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: http://prometheus:9090/api/v1/otlp/v1/metrics
       OTEL_EXPORTER_OTLP_METRICS_PROTOCOL: http/protobuf
       OTEL_METRIC_EXPORT_INTERVAL: "1000"
+      LOG_LEVEL: debug
     ports:
       - "8080"
 
