--- a/examples/hasura/compose.yaml
+++ b/examples/hasura/compose.yaml
@@ -17,6 +17,7 @@ services:
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true"
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
       HASURA_GRAPHQL_AUTH_HOOK: http://auth-hook:8080/auth/hasura
+      HASURA_GRAPHQL_AUTH_HOOK_MODE: POST
       HASURA_GRAPHQL_ENABLE_TELEMETRY: "false"
     extra_hosts:
       - local.hasura.dev:host-gateway
