--- a/examples/auth/config.yaml
+++ b/examples/auth/config.yaml
@@ -1,6 +1,4 @@
 # yaml-language-server: $schema=../../jsonschema/auth.schema.json
-settings:
-  strict: true
 definitions:
   - mode: apiKey
     tokenLocation:
@@ -13,6 +11,23 @@ definitions:
         value: user
       x-hasura-user-id:
         value: "1"
+  - id: test_jwt
+    mode: jwt
+    tokenLocation:
+      in: header
+      name: Authorization
+      scheme: bearer
+    key:
+      algorithm: HS256
+      key:
+        value: NTNv7j0TuYARvmNMmWXo6fKvM4o6nvxyz
+    claimsConfig:
+      namespace:
+        location: '"claims.jwt.hasura.io"'
+        claimsFormat: Json
+      locations:
+        x-hasura-user-id:
+          path: sub
   - mode: noAuth
     sessionVariables:
       x-hasura-role:
