--- a/authtests/testdata/config.yaml
+++ b/authtests/testdata/config.yaml
@@ -1,9 +1,9 @@
 # yaml-language-server: $schema=../../jsonschema/auth.schema.json
 settings:
-  strict: true
   reloadInterval: 0
 definitions:
-  - mode: jwt
+  - id: test_jwt
+    mode: jwt
     tokenLocation:
       in: header
       name: Authorization
@@ -20,8 +20,9 @@ definitions:
         x-hasura-user-id:
           path: sub
   - mode: apiKey
-    in: header
-    name: Authorization
+    tokenLocation:
+      in: header
+      name: Authorization
     value:
       value: "randomsecret"
     sessionVariables:
@@ -40,3 +41,8 @@ definitions:
     sessionVariables:
       x-hasura-role:
         value: anonymous
+    securityRules:
+      headerRules:
+        origin:
+          value:
+            - localhost
