--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,7 +5,7 @@ on:
       - "v*"
 
 env:
-  DOCKER_REGISTRY: ghcr.io
+  GHCR_REGISTRY: ghcr.io
   DOCKER_IMAGE_NAME: relychan/rely-auth
 
 permissions:
@@ -25,18 +25,24 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.GHCR_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.DOCKER_REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get version from tag
         id: get-version
@@ -48,7 +54,9 @@ jobs:
         id: docker-metadata
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}
+          images: |
+            ${{ env.DOCKER_IMAGE_NAME }}
+            ${{ env.GHCR_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}
 
       - name: Build and push
         uses: docker/build-push-action@v6
@@ -57,7 +65,7 @@ jobs:
           tags: ${{ steps.docker-metadata.outputs.tags }}
           labels: ${{ steps.docker-metadata.outputs.labels }}
           platforms: linux/amd64,linux/arm64
-          cache-from: type=registry,ref=${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:latest
+          cache-from: type=registry,ref=${{ env.GHCR_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:latest
           cache-to: type=inline
           build-args: |
             VERSION=${{ steps.get-version.outputs.tagged_version }}
@@ -66,7 +74,7 @@ jobs:
         uses: aquasecurity/trivy-action@0.33.1
         with:
           scan-type: "image"
-          image-ref: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ steps.get-version.outputs.tagged_version }}
+          image-ref: ${{ env.GHCR_REGISTRY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ steps.get-version.outputs.tagged_version }}
           format: table
           severity: "CRITICAL,HIGH"
           scanners: vuln
