--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ github.actor }}
+          username: relychan
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
       - name: Login to GitHub Container Registry
