refactor the config structure

--- a/authtests/testdata/config.yaml
+++ b/authtests/testdata/config.yaml
@@ -1,51 +1,52 @@
 # yaml-language-server: $schema=../../jsonschema/auth.schema.json
 version: v1
 kind: AuthConfig
-settings:
-  reloadInterval: 0
 definition:
-  - id: test_jwt
-    mode: jwt
-    tokenLocation:
-      in: header
-      name: Authorization
-      scheme: bearer
-    key:
-      algorithm: HS256
+  settings:
+    reloadInterval: 0
+  modes:
+    - id: test_jwt
+      mode: jwt
+      tokenLocation:
+        in: header
+        name: Authorization
+        scheme: bearer
       key:
-        env: JWT_KEY
-    claimsConfig:
-      namespace:
-        location: '"claims.jwt.hasura.io"'
-        claimsFormat: Json
-      locations:
-        x-hasura-user-id:
-          path: sub
-  - mode: apiKey
-    tokenLocation:
-      in: header
-      name: Authorization
-    value:
-      value: "randomsecret"
-    sessionVariables:
-      x-hasura-role:
-        value: admin
-      x-some-array-int:
-        value: [1, 2, 3]
-      x-some-array-bool:
-        value: [true, false]
-      x-some-array-string:
-        value: ["foo", "bar"]
-      x-some-object:
-        value:
-          foo: baz
-  - mode: noAuth
-    sessionVariables:
-      x-hasura-role:
-        value: anonymous
-    securityRules:
-      headerRules:
-        origin:
-          include:
-            value:
-              - localhost
+        algorithm: HS256
+        key:
+          env: JWT_KEY
+      claimsConfig:
+        namespace:
+          location: '"claims.jwt.hasura.io"'
+          claimsFormat: Json
+        locations:
+          x-hasura-user-id:
+            path: sub
+    - mode: apiKey
+      tokenLocation:
+        in: header
+        name: Authorization
+      value:
+        value: "randomsecret"
+      sessionVariables:
+        x-hasura-role:
+          value: admin
+        x-some-array-int:
+          value: [1, 2, 3]
+        x-some-array-bool:
+          value: [true, false]
+        x-some-array-string:
+          value: ["foo", "bar"]
+        x-some-object:
+          value:
+            foo: baz
+    - mode: noAuth
+      sessionVariables:
+        x-hasura-role:
+          value: anonymous
+      securityRules:
+        headerRules:
+          origin:
+            include:
+              value:
+                - localhost
