--- a/authtests/testdata/webhook.yaml
+++ b/authtests/testdata/webhook.yaml
@@ -2,47 +2,48 @@
 version: v1
 kind: AuthConfig
 definition:
-  - mode: webhook
-    url:
-      env: AUTH_HOOK_URL
-    method: POST
-    customRequest:
-      headers:
-        forward:
-          - Authorization
-      body:
-        type: gotmpl
-        contentType: application/json
-        template: |
-          {
-            "x-hasura-role": "user"
-          }
-    customResponse:
-      response:
-        type: jmespath
-        template:
-          type: object
-          properties:
-            x-hasura-role:
-              type: field
-              path: body."x-hasura-role"
+  modes:
+    - mode: webhook
+      url:
+        env: AUTH_HOOK_URL
+      method: POST
+      customRequest:
+        headers:
+          forward:
+            - Authorization
+        body:
+          type: gotmpl
+          contentType: application/json
+          template: |
+            {
+              "x-hasura-role": "user"
+            }
+      customResponse:
+        response:
+          type: jmespath
+          template:
+            type: object
+            properties:
+              x-hasura-role:
+                type: field
+                path: body."x-hasura-role"
 
-  - mode: webhook
-    url:
-      env: AUTH_HOOK_URL
-    method: GET
-    customRequest:
-      headers:
-        additional:
-          Authorization:
-            default:
-              value: Bearer bearertoken
-    customResponse:
-      response:
-        type: gotmpl
-        contentType: application/json
-        template: |
-          {
-            "x-hasura-role": "{{ index .body "x-hasura-role" }}",
-            "x-content-type": "{{ index .headers "content-type" }}"
-          }
+    - mode: webhook
+      url:
+        env: AUTH_HOOK_URL
+      method: GET
+      customRequest:
+        headers:
+          additional:
+            Authorization:
+              default:
+                value: Bearer bearertoken
+      customResponse:
+        response:
+          type: gotmpl
+          contentType: application/json
+          template: |
+            {
+              "x-hasura-role": "{{ index .body "x-hasura-role" }}",
+              "x-content-type": "{{ index .headers "content-type" }}"
+            }
