change AuthConfig kind to RelyAuth

--- a/authtests/testdata/config.yaml
+++ b/authtests/testdata/config.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../../jsonschema/auth.schema.json
 version: v1
-kind: AuthConfig
+kind: RelyAuth
 definition:
   settings:
     reloadInterval: 0
